# wa-chat-llm

./: .env.example  README.md  app.py  docker-compose.yml  pyproject.toml
config/: __init__.py  prompts.py  settings.py
database/: README.md  init.sql
docs/: AUTHENTICATION_FLOW.md
services/: __init__.py  conversation_manager.py  conversation_manager_db.py  database.py  llm_service.py  whatsapp_utils.py
